# aero

./: .gitignore  README.md
docs/: CNAME  index.html
models/: warmstart_model.onnx
reports/: AERO_TECHNICAL_REPORT.md  aero_benchmark_cases.csv
scripts/: aero_case_generator.py  benchmark_aero.py  case_gen_3d.py  materialize_tiers.py
solver/: CMakeLists.txt  aero_infer.cpp  aero_raw_io.py
solver/aeroRun/: aeroRun.C  setDeltaT.C  setDeltaT.H
solver/aeroRun/Make/: files  options
test_cases/2d/aero_10h_2d/: Allrun  MODEL_INFO.json
test_cases/2d/aero_10h_2d/0/: U  epsilon  k
test_cases/2d/aero_10h_2d/constant/: physicalProperties
test_cases/2d/aero_10h_2d/system/: blockMeshDict  controlDict  topoSetDict
test_cases/2d/aero_1h_2d/: Allrun  MODEL_INFO.json
test_cases/2d/aero_1h_2d/0/: U  epsilon  k
test_cases/2d/aero_1h_2d/constant/: physicalProperties
test_cases/2d/aero_1h_2d/system/: blockMeshDict  controlDict  fvSolution  topoSetDict
test_cases/2d/aero_3h_2d/: Allrun  MODEL_INFO.json
test_cases/2d/aero_3h_2d/0/: U  epsilon  k
test_cases/2d/aero_3h_2d/constant/: physicalProperties
test_cases/2d/aero_3h_2d/system/: blockMeshDict  controlDict  topoSetDict
test_cases/2d/aero_5h_2d/: Allrun  MODEL_INFO.json
test_cases/2d/aero_5h_2d/0/: U  epsilon  k
test_cases/2d/aero_5h_2d/constant/: physicalProperties
test_cases/3d/aero_10h_3d/: Allrun  MODEL_INFO.json
test_cases/3d/aero_1h_3d/: Allrun  MODEL_INFO.json
test_cases/3d/aero_3h_3d/: Allrun  MODEL_INFO.json
test_cases/3d/aero_5h_3d/: Allrun  MODEL_INFO.json
(+35 files in other folders)
